Updating css and templates

--- a/app/views/change-password-new.html
+++ b/app/views/change-password-new.html
@@ -3,8 +3,8 @@
 
 {% block content %}
         <div class="govuk-grid-row">
-            <div class="column-two-thirds">
-                <h1 class="heading-xlarge">
+            <div class="govuk-grid-column-two-thirds">
+                <h1 class="govuk-heading-xl">
                      Change password
                 </h1>
             </div>
@@ -15,11 +15,11 @@
             <form method="post" action="/change-password-new">
               <fieldset>
                 <legend class="vh">Enter your current password</legend>
-                <div class="form-group">
-                  <label for="new-password" class="form-label-bold">Create new password</label>
-                    <div class="form-hint">
-                        <p>Your password must:</p>
-                        <ul class="list-bullet">
+                <div class="govuk-form-group">
+                  <label for="new-password" class="govuk-label govuk-label--s">Create new password</label>
+                    <div class="govuk-label__hint">
+                        <p class="govuk-body">Your password must:</p>
+                        <ul class="govuk-list--bullet">
                           <li>be at least 8 characters</li>
                           <li>have at least one number (0-9)</li>
                       <li>have at least one letter (a-z)</li>
@@ -27,11 +27,11 @@
                     </ul>
                     </div>
 
-                  <input class="form-control" id="new-password" name="new-password" type="password" required="required">
+                  <input class="govuk-input govuk-!-width-one-half" id="new-password" name="new-password" type="password" required="required">
                 </div>
-                <div class="form-group">
-                  <label class="form-label-bold" for="confirm-password">Confirm your new password</label>
-                  <input class="form-control" id="confirm-password" name="confirm-password" type="password" required="required">
+                <div class="govuk-form-group">
+                  <label class="govuk-label govuk-label--s" for="confirm-password">Confirm your new password</label>
+                  <input class="govuk-input govuk-!-width-one-half" id="confirm-password" name="confirm-password" type="password" required="required">
                 </div>
                 <div class="form-submit">
                   <button type="submit" class="button">Continue</button>
