--- a/app/views/concepts/components/tooltips.html
+++ b/app/views/concepts/components/tooltips.html
@@ -10,9 +10,9 @@
   This is a helpful tooltip
 </p>
 
-<hr>
+<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
-<p></p>
+<p class="govuk-body"></p>
 <p class="toggle-help">
   This is another tooltip
 </p>
