--- a/app/views/concepts/portal/services-v2.html
+++ b/app/views/concepts/portal/services-v2.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="column-two-thirds">
+  <div class="govuk-grid-column-two-thirds">
 
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Access DfE services
     </h1>
     <div class="heading-group">
-    <h2 class="heading-medium">
+    <h2 class="govuk-heading-m">
       Your DfE services <span class=""> <a href="viewall">View available DfE services</a></span>
     </h2>
   </div>
@@ -20,7 +20,7 @@
       <li>
         <a href="dd" class="service service-k2s">
           <h2>Key to Success</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+          <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
         </a>
         <a href="manage" class="manage">
           Manage access and users for Key to Success
@@ -29,26 +29,26 @@
       <li>
         <a class="service service-collect" href="ss#">
             <h2>COLLECT</h2>
-            <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+            <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
         </a>
       </li>
       <li>
         <a class="service service-gias" href="aa">
           <h2>Get information about schools</h2>
-          <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+          <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
         </a>
       </li>
     </ul>
 
-    <h3 class="heading-medium">You have requested access to the following services</h3>
-    <h4 class="heading-small school">Saint Patricks School</h4>
+    <h3 class="govuk-heading-m">You have requested access to the following services</h3>
+    <h4 class="govuk-heading-s school">Saint Patricks School</h4>
     <ul class="service-list-table">
       <li class="service-mtc">
-        <p>Multiplication tables check</p>
+        <p class="govuk-body">Multiplication tables check</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
       <li class="service-eb">
-        <p>Edubase</p>
+        <p class="govuk-body">Edubase</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
     </ul>
@@ -56,7 +56,7 @@
 
   </div>
   <div class="col-3">
-    <h3 class="heading-medium details-heading">Your details</h3>
+    <h3 class="govuk-heading-m details-heading">Your details</h3>
    <ul class="list">
       <li><a href=change">Change your password</a></li>
       <li><a href="edit">Edit your details</a></li>
