--- a/app/views/concepts/portal/services.html
+++ b/app/views/concepts/portal/services.html
@@ -2,43 +2,43 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="column-two-thirds">
-    <h1 class="heading-xlarge">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">
       Access DfE services
     </h1>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-9">
-    <h2 class="heading-medium">
+    <h2 class="govuk-heading-m">
       Your DfE services
     </h2>
 
     <div class="cards">
       <a class="card service-k2s" href="#">
         <h2>Key to Success</h2>
-        <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+        <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
       </a>
 
       <a class="card service-collect" href="#">
         <h2>COLLECT</h2>
-        <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+        <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
       </a>
 
       <a class="card service-gias" href="#">
         <h2>Get information about schools</h2>
-        <p>Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
+        <p class="govuk-body">Service approver is Greg Sanders (greg.sanders@stpatricks.co.uk)</p>
       </a>
     </div>
 
-    <h3 class="heading-medium">You have requested access to the following services</h3>
+    <h3 class="govuk-heading-m">You have requested access to the following services</h3>
     <ul class="service-list">
       <li class="service-mtc">
-        <p>Multiplication tables check</p>
+        <p class="govuk-body">Multiplication tables check</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
       <li class="service-eb">
-        <p>Edubase</p>
+        <p class="govuk-body">Edubase</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
     </ul>
