--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="global-cookie-message">
-    <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
+    <p class="govuk-body">GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
         cookies</a></p>
 </div>
 
@@ -31,8 +31,8 @@
 
     <main id="content" role="main" tabindex="-1">
         <div class="govuk-grid-row">
-          <div class="column-two-thirds">
-            <h1 class="heading-xlarge">
+          <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-xl">
               Sign in
             </h1>
 
@@ -42,22 +42,22 @@
 
             <a href="#" class="card">
               <h2>Start username/password</h2>
-              <p>Start the default username and password login journey</p>
+              <p class="govuk-body">Start the default username and password login journey</p>
             </a>
 
             <a href="#" class="card">
               <h2>Interaction complete</h2>
-              <p>Show the interaction complete page</p>
+              <p class="govuk-body">Show the interaction complete page</p>
             </a>
 
           <a href="#" class="card">
             <h2>Start username/password</h2>
-            <p>Start the default username and password login journey</p>
+            <p class="govuk-body">Start the default username and password login journey</p>
           </a>
 
           <a href="#" class="card">
             <h2>Interaction complete</h2>
-            <p>Show the interaction complete page</p>
+            <p class="govuk-body">Show the interaction complete page</p>
           </a>
 
         </div>
