--- a/app/views/journeys/helpdesk/users-search-results.html
+++ b/app/views/journeys/helpdesk/users-search-results.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col-6">
-    <h1 class="heading-xlarge">Users</h1>
+    <h1 class="govuk-heading-xl">Users</h1>
   </div>
 </div>
 <div class="row">
@@ -22,9 +22,9 @@
   </div>
 </div>
 
-<p>Showing 6 users</p>
+<p class="govuk-body">Showing 6 users</p>
 
-<table class="table-font-xsmall sortable">
+<table class="table-govuk-body-s sortable">
   <thead>
     <tr>
       <th scope="col">Name</th>
