--- a/app/views/journeys/invite/step2-2.html
+++ b/app/views/journeys/invite/step2-2.html
@@ -4,7 +4,7 @@
 <a href="step5" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Edit user's details
     </h1>
   </div>
@@ -13,22 +13,22 @@
   <div class="col-12">
     <form method="get" action="step5">
       <fieldset>
-        <legend class="heading-medium">User's personal details</legend>
-        <div class="form-group">
-          <label class="form-label" for="firstname">First name</label>
-          <input class="form-control" type="text" name="firstname" id="firstname" required="required" value="Catherine">
+        <legend class="govuk-heading-m">User's personal details</legend>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="firstname">First name</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="firstname" id="firstname" required="required" value="Catherine">
         </div>
-        <div class="form-group">
-          <label class="form-label" for="lastname">Last name</label>
-          <input class="form-control" type="text" name="lastname" id="lastname" required="required" value="Mills">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="lastname">Last name</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="lastname" id="lastname" required="required" value="Mills">
         </div>
-        <div class="form-group">
-          <label class="form-label" for="email">Email address</label>
-          <input class="form-control" type="email" name="email" id="email" value="catherine.mills@bourneabbey.herts.sch.uk" readonly disabled>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="email">Email address</label>
+          <input class="govuk-input govuk-!-width-one-half" type="email" name="email" id="email" value="catherine.mills@bourneabbey.herts.sch.uk" readonly disabled>
         </div>
-        <div class="form-group">
-          <label class="form-label" for="jobtitle">Job title (optional)</label>
-          <input class="form-control" type="text" name="jobtitle" id="jobtitle">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="jobtitle">Job title (optional)</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="jobtitle" id="jobtitle">
         </div>
       </fieldset>
       <div class="submit-buttons">
