--- a/app/views/journeys/invite/step4-2.html
+++ b/app/views/journeys/invite/step4-2.html
@@ -4,7 +4,7 @@
 <a href="step5" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Edit welcome message
     </h1>
   </div>
@@ -12,9 +12,9 @@
 <div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step5">
-      <div class="form-group">
-        <label class="form-label" for="message">Message to the user</label>
-        <textarea class="form-control form-control-3-4" rows="8" name="message" id="message">Catherine,
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="message">Message to the user</label>
+        <textarea class="govuk-input govuk-!-width-three-quarters" rows="8" name="message" id="message">Catherine,
 
 I've given you access to our DfE services. Follow the instructions below to start using them.
 
