--- a/app/views/journeys/invite/step4.html
+++ b/app/views/journeys/invite/step4.html
@@ -4,18 +4,18 @@
 <a href="step3" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Welcome message
     </h1>
-    <p class="lede">Add a personalised message for the new user.</p>
+    <p class="govuk-body-l">Add a personalised message for the new user.</p>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step5">
-      <div class="form-group">
-        <label class="form-label" for="message">Message to the user</label>
-        <textarea class="form-control form-control-3-4" rows="8" name="message" id="message">You have been given access to our DfE services. Follow the instructions below to start using them.</textarea>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="message">Message to the user</label>
+        <textarea class="govuk-input govuk-!-width-three-quarters" rows="8" name="message" id="message">You have been given access to our DfE services. Follow the instructions below to start using them.</textarea>
       </div>
       <div class="submit-buttons">
         <input type="submit" class="button" value="Review">
