--- a/app/views/journeys/migration/step3.html
+++ b/app/views/journeys/migration/step3.html
@@ -4,10 +4,10 @@
 <a href="step2" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Are these your details?
     </h1>
-    <p class="lede">Check the details below to see if they belong to you</p>
+    <p class="govuk-body-l">Check the details below to see if they belong to you</p>
     <dl class="rows">
       <dt>First name</dt>
       <dd>Jane</dd>
@@ -25,10 +25,10 @@
 
 
     <div class="panel panel-border-wide">
-      <p>If you need to edit any of these details, you can do so once you are signed-in at the end of this process</p>
+      <p class="govuk-body">If you need to edit any of these details, you can do so once you are signed-in at the end of this process</p>
     </div>
 
-    <p>
+    <p class="govuk-body">
       <a href="step4" class="button">Continue</a>
     </p>
 
