--- a/app/views/services.html
+++ b/app/views/services.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="global-cookie-message">
-        <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a></p>
+        <p class="govuk-body">GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies" class="govuk-link">Find out more about cookies</a></p>
     </div>
 
     <div class="wrapper">
@@ -30,8 +30,8 @@
 
       <main class="elements-index" id="content" role="main" tabindex="-1">
         <div class="govuk-grid-row">
-          <div class="column-two-thirds">
-            <h1 class="heading-xlarge">
+          <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-xl">
               Services
             </h1>
           </div>
@@ -39,20 +39,20 @@
         <ul class="services-list">
             <li>
                 <div class="card">
-                    <h2><a href="#">Key to Success</a></h2>
-                    <p>Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
+                    <h2><a href="#" class="govuk-link">Key to Success</a></h2>
+                    <p class="govuk-body">Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
                 </div>
             </li>
             <li>
                 <div class="card">
-                    <h2><a href="#">Multiplication tables check</a></h2>
-                    <p>Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
+                    <h2><a href="#" class="govuk-link">Multiplication tables check</a></h2>
+                    <p class="govuk-body">Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
                 </div>
             </li>
             <li>
                 <div class="card">
-                    <h2>COLLECT (<a href="#">Visit via old Secure Access</a>)</h2>
-                    <p>Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
+                    <h2>COLLECT (<a href="#" class="govuk-link">Visit via old Secure Access</a>)</h2>
+                    <p class="govuk-body">Service approver is John Smith (john.smith@stpatricks.co.uk)</p>
                 </div>
             </li>
         </ul>
@@ -63,9 +63,9 @@
       <div class="footer-wrapper">
         <nav>
           <ul>
-            <li><a href="cookies.html">Cookies</a></li>
-            <li><a href="privacy.html">Privacy policy</a></li>
-            <li><a href="terms.html">Terms and conditions</a></li>
+            <li><a href="cookies.html" class="govuk-link">Cookies</a></li>
+            <li><a href="privacy.html" class="govuk-link">Privacy policy</a></li>
+            <li><a href="terms.html" class="govuk-link">Terms and conditions</a></li>
           </ul>
         </nav>
       </div>
@@ -75,8 +75,8 @@
     <nav class="prototype">
       <ul>
         <li>Example layouts:</li>
-        <li><a href="index.html">Grid</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="index.html" class="govuk-link">Grid</a></li>
+        <li><a href="login.html" class="govuk-link">Login</a></li>
       </ul>
     </nav>
 
