--- a/app/views/styles.html
+++ b/app/views/styles.html
@@ -6,27 +6,27 @@
 {% block content %}
 
         <div class="govuk-grid-row">
-          <div class="column-two-thirds">
+          <div class="govuk-grid-column-two-thirds">
 
-            <h1 class="heading-xlarge">
+            <h1 class="govuk-heading-xl">
               Examples
             </h1>
 
-            <h2 class="heading-medium">Notifications</h2>
+            <h2 class="govuk-heading-m">Notifications</h2>
 
             <div class="notification notification-success" tabindex="0">
               <h2>Success</h2>
-              <p>Your password has been reset</p>
+              <p class="govuk-body">Your password has been reset</p>
               <span class="icon">x</span>
             </div>
 
             <div class="notification notification-error" tabindex="0">
               <h2>Error saving your account</h2>
-              <p>The passwords you entered did not match</p>
+              <p class="govuk-body">The passwords you entered did not match</p>
               <span class="icon">x</span>
             </div>
 
-            <h2 class="heading-medium">Tooltips</h2>
+            <h2 class="govuk-heading-m">Tooltips</h2>
 
             <p class="toggle-help">
               This is another tooltip
