--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -1,5 +1,5 @@
 
-.form-hint {
+.govuk-label__hint {
   p {
 
   }
@@ -16,7 +16,7 @@ fieldset.highlight {
   padding: 15px;
   box-sizing: border-box;
   margin-bottom: 20px;
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     padding: 30px;
   }
   .form-control {
@@ -24,20 +24,20 @@ fieldset.highlight {
   }
 }
 
-.form-group {
-  p.form-hint {
+.govuk-form-group {
+  p.govuk-label__hint {
     margin-bottom: 5px;
   }
   .error-message {
     display: none;
   }
-  &.form-group-error .error-message {
+  &.govuk-form-group-error .error-message {
     display: block;
   }
   .help-text {
 
   }
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     &.indent {
       padding-left: 210px;
     }
@@ -49,7 +49,7 @@ fieldset.highlight {
   margin-bottom: 10px;
 }
 
-.form-group-error {
+.govuk-form-group-error {
   margin-right: 0;
 }
 
@@ -57,10 +57,10 @@ fieldset.highlight {
   width:100%;
 }
 
-@include govuk-media-query($until: tablet) {
+@include govuk-media-query(tablet) {
   .full-width {
     width:100%;
-    &.form-group-error {
+    &.govuk-form-group-error {
       margin-right: 15px;
     }
   }
@@ -71,7 +71,7 @@ form {
     padding-top: 7px;
     padding-bottom: 5px;
     margin-bottom: 15px;
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       margin-bottom: 30px;
     }
   }
@@ -92,7 +92,7 @@ form.inline {
 }
 
 fieldset.with-sub-title {
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     position: relative;
     margin-left: 210px;
     width: auto;
@@ -138,7 +138,7 @@ div.show-password {
       width: 27px;
       height: 27px;
       margin: 2px 5px;
-      @include govuk-media-query($until: tablet) {
+      @include govuk-media-query(tablet) {
         margin: 5px 7px;
       }
     }
@@ -158,7 +158,7 @@ div.show-password {
   }
 }
 
-@include govuk-media-query($until: tablet) {
+@include govuk-media-query(tablet) {
   div.show-password {
     display: inline-block;
     width: 50%;
@@ -213,13 +213,13 @@ div.show-password {
 .buttons {
   .button {
     margin-bottom: 5px;
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       display: inline-block;
       margin-right: 5px;
     }
   }
   &.pull-right .button {
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       margin-right: 0;
       margin-left: 5px;
     }
@@ -238,14 +238,14 @@ div.show-password {
 .submit-buttons {
   .button {
     margin-bottom: 10px;
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       margin-right: 5px;
     }
   }
 }
 
 .form-submit {
-  @extend .form-group
+  @extend .govuk-form-group
 }
 
 .search-form {
@@ -353,7 +353,7 @@ form.show-filters {
 
 .filter-link {
   margin-bottom: 15px;
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     margin: 7px 0 15px 0;
   }
 }
@@ -373,7 +373,7 @@ form.show-filters {
 }
 
 form#form-service-config {
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     .inputConfig, #secret-input {
       width: 75%
     }
@@ -381,7 +381,7 @@ form#form-service-config {
 }
 
 form#form-new-banner {
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     .banner-input {
       width: 65%
     }
