--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -34,7 +34,7 @@ dl.rows {
   }
   dt {
     font-weight:bold;
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       float: left;
       clear: left;
       width: 200px;
@@ -52,7 +52,7 @@ dl.rows {
   }
   dd {
     margin-bottom: 5px;
-    @include govuk-media-query($until: tablet) {
+    @include govuk-media-query(tablet) {
       margin-left: 210px
     }
   }
@@ -97,7 +97,7 @@ blockquote {
 
 .meta {
   font-size: 14px;
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     font-size: 16px;
   }
 }
