--- a/app/views/change-password-current.html
+++ b/app/views/change-password-current.html
@@ -5,8 +5,8 @@
 
 
         <div class="govuk-grid-row">
-            <div class="column-two-thirds">
-                <h1 class="heading-xlarge">
+            <div class="govuk-grid-column-two-thirds">
+                <h1 class="govuk-heading-xl">
                     Change password
                 </h1>
             </div>
@@ -17,19 +17,19 @@
                 <form method="post" action="/change-password-new" id="form-current-password" novalidate="novalidate">
                   <fieldset>
                       <legend class="vh">Enter your current password</legend>
-                      <div class="form-group">
-                          <label class="form-label-bold" for="current-password">Enter your current password</label>
+                      <div class="govuk-form-group">
+                          <label class="govuk-label govuk-label--s" for="current-password">Enter your current password</label>
                           <span class="error-message"></span>
                         <div class="show-password">
-                          <input class="form-control" id="current-password" name="current-password" type="password" required="required" pattern=".{8,}" data-validation="Enter a password in the following format">
+                          <input class="govuk-input govuk-!-width-one-half" id="current-password" name="current-password" type="password" required="required" pattern=".{8,}" data-validation="Enter a password in the following format">
                         </div>
                       </div>
-                      <hr>
-                      <div class="form-group">
-                        <label for="new-password" class="form-label-bold">Create new password</label>
-                        <div class="form-hint">
-                          <p>Your password must:</p>
-                          <ul class="list-bullet">
+                      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+                      <div class="govuk-form-group">
+                        <label for="new-password" class="govuk-label govuk-label--s">Create new password</label>
+                        <div class="govuk-label__hint">
+                          <p class="govuk-body">Your password must:</p>
+                          <ul class="govuk-list--bullet">
                             <li>be at least 8 characters</li>
                             <li>have at least one number (0-9)</li>
                             <li>have at least one letter (a-z)</li>
@@ -37,13 +37,13 @@
                           </ul>
                         </div>
                         <div class="show-password">
-                          <input class="form-control" id="new-password" name="new-password" type="password" required="required">
+                          <input class="govuk-input govuk-!-width-one-half" id="new-password" name="new-password" type="password" required="required">
                         </div>
                       </div>
-                      <div class="form-group">
-                        <label class="form-label-bold" for="confirm-password">Confirm your new password</label>
+                      <div class="govuk-form-group">
+                        <label class="govuk-label govuk-label--s" for="confirm-password">Confirm your new password</label>
                         <div class="show-password">
-                          <input class="form-control" id="confirm-password" name="confirm-password" type="password" required="required">
+                          <input class="govuk-input govuk-!-width-one-half" id="confirm-password" name="confirm-password" type="password" required="required">
                         </div>
                       </div>
                       <div class="form-submit">
