--- a/app/views/concepts/components/cookie-banner.html
+++ b/app/views/concepts/components/cookie-banner.html
@@ -1,23 +1,23 @@
 <div class="global-cookie-message-dfe-sign-in" id="dsi-cookie-banner">
     <div class="govuk-grid-row global-cookie-message-dfe-sign-in__cookie-message-container">
-        <div class="column-two-thirds">
-            <h2 class="heading-medium heading-medium--govuk">
+        <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-m govuk-heading-m--govuk">
                 Tell us whether you accept cookies
             </h2>
             <p class="govuk-body govuk-body--shim">
                 We use cookies to
-                <a href="<%=locals.urls.interactions || ''%>/cookies">collect information</a>
+                <a href="<%=locals.urls.interactions || ''%>/cookies" class="govuk-link">collect information</a>
                 about how you use DfE Sign in.
                 We use this information to improve our services
                 and to make this website work as efficently as possible.
             </p>
             <div class="govuk-grid-row">
-                <div class="column-one-half">
+                <div class="govuk-grid-column-one-half">
                     <button class="button button--govuk cookie-accept">
                         Accept all cookies
                     </button>
                 </div>
-                <div class="column-one-half">
+                <div class="govuk-grid-column-one-half">
                     <a class="button button--govuk" href="<%=locals.urls.interactions || ''%>/cookies">
                         Set cookie preferences
                     </a>
