--- a/app/views/concepts/portal/services-v3.html
+++ b/app/views/concepts/portal/services-v3.html
@@ -7,11 +7,11 @@
 
 <div class="govuk-grid-row">
   <div class="col-9">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Access DfE services
     </h1>
     <div class="heading-group">
-      <h2 class="heading-medium">
+      <h2 class="govuk-heading-m">
         Your DfE services
       </h2><a href="viewall">View available DfE services</a>
     </div>
@@ -51,15 +51,15 @@
 
     </ul>
 
-    <h3 class="heading-medium">You have requested access to the following services</h3>
-    <h4 class="heading-small school">Saint Patrick's School</h4>
+    <h3 class="govuk-heading-m">You have requested access to the following services</h3>
+    <h4 class="govuk-heading-s school">Saint Patrick's School</h4>
     <ul class="service-list-table">
       <li class="service-mtc">
-        <p>Multiplication tables check</p>
+        <p class="govuk-body">Multiplication tables check</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
       <li class="service-eb">
-        <p>Edubase</p>
+        <p class="govuk-body">Edubase</p>
         <span>Request sent to Steve Jones (steve.jones@stpatricks.co.uk) on 30th October 2017</span>
       </li>
     </ul>
@@ -67,7 +67,7 @@
 
   </div>
   <div class="col-3">
-    <h3 class="heading-medium details-heading">Your details</h3>
+    <h3 class="govuk-heading-m details-heading">Your details</h3>
    <ul class="list">
       <li><a href=change">Change your password</a></li>
       <li><a href="edit">Edit your details</a></li>
@@ -78,7 +78,7 @@
 
 <div class="overlay">
   <div class="modal">
-    <h2 class="heading-large">
+    <h2 class="govuk-heading-l">
       Key to Success <span class="heading-secondary">Information</span>
     </h2>
     <dl class="rows condensed">
