--- a/app/views/forgotpassword.html
+++ b/app/views/forgotpassword.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="global-cookie-message">
-    <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
+    <p class="govuk-body">GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
         cookies</a></p>
 </div>
 
@@ -33,14 +33,14 @@
 
     <main id="content" role="main" tabindex="-1">
 
-        <a href="#" class="link-back">Back</a>
+        <a href="#" class="govuk-back-link">Back</a>
 
         <div class="govuk-grid-row">
-            <div class="column-two-thirds">
-                <h1 class="heading-xlarge">
+            <div class="govuk-grid-column-two-thirds">
+                <h1 class="govuk-heading-xl">
                     Forgotten password
                 </h1>
-                <p class="lede">Enter your work email address in the form below to reset your password.</p>
+                <p class="govuk-body-l">Enter your work email address in the form below to reset your password.</p>
             </div>
         </div>
 
@@ -49,9 +49,9 @@
                 <form method="get" action="forgotpasswordemail.html">
                     <fieldset>
                         <legend class="vh">Forgotten password</legend>
-                        <div class="form-group">
-                            <label class="form-label-bold" for="email">Email address</label>
-                            <input class="form-control" id="email" type="text">
+                        <div class="govuk-form-group">
+                            <label class="govuk-label govuk-label--s" for="email">Email address</label>
+                            <input class="govuk-input govuk-!-width-one-half" id="email" type="text">
                         </div>
                         <div class="form-submit">
                             <button type="submit" class="button">Submit</button>
@@ -70,9 +70,9 @@
     <div class="footer-wrapper">
         <nav>
             <ul>
-                <li><a href="cookies.html">Cookies</a></li>
-                <li><a href="privacy.html">Privacy policy</a></li>
-                <li><a href="terms.html">Terms and conditions</a></li>
+                <li><a href="cookies.html" class="govuk-link">Cookies</a></li>
+                <li><a href="privacy.html" class="govuk-link">Privacy policy</a></li>
+                <li><a href="terms.html" class="govuk-link">Terms and conditions</a></li>
             </ul>
         </nav>
     </div>
@@ -82,8 +82,8 @@
 <nav class="prototype">
     <ul>
         <li>Example layouts:</li>
-        <li><a href="index.html">Grid</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="index.html" class="govuk-link">Grid</a></li>
+        <li><a href="login.html" class="govuk-link">Login</a></li>
     </ul>
 </nav>
 
