--- a/app/views/forgotpasswordemail.html
+++ b/app/views/forgotpasswordemail.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="global-cookie-message">
-    <p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
+    <p class="govuk-body">GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about
         cookies</a></p>
 </div>
 
@@ -46,9 +46,9 @@
     <div class="footer-wrapper">
         <nav>
             <ul>
-                <li><a href="cookies.html">Cookies</a></li>
-                <li><a href="privacy.html">Privacy policy</a></li>
-                <li><a href="terms.html">Terms and conditions</a></li>
+                <li><a href="cookies.html" class="govuk-link">Cookies</a></li>
+                <li><a href="privacy.html" class="govuk-link">Privacy policy</a></li>
+                <li><a href="terms.html" class="govuk-link">Terms and conditions</a></li>
             </ul>
         </nav>
     </div>
@@ -58,8 +58,8 @@
 <nav class="prototype">
     <ul>
         <li>Example layouts:</li>
-        <li><a href="index.html">Grid</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="index.html" class="govuk-link">Grid</a></li>
+        <li><a href="login.html" class="govuk-link">Login</a></li>
     </ul>
 </nav>
 
