--- a/app/views/journeys/invite/step1.html
+++ b/app/views/journeys/invite/step1.html
@@ -4,18 +4,18 @@
 <a href="step1" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Add a new user
     </h1>
-    <p class="lede">Enter the user's email address</p>
+    <p class="govuk-body-l">Enter the user's email address</p>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step2">
-      <div class="form-group">
-        <label class="form-label" for="email">User's email address</label>
-        <input class="form-control" type="email" name="email" id="email" required="required" data-label="Email address">
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="email">User's email address</label>
+        <input class="govuk-input govuk-!-width-one-half" type="email" name="email" id="email" required="required" data-label="Email address">
       </div>
       <div class="submit-buttons">
         <input type="submit" class="button" value="Continue">
