--- a/app/views/journeys/invite/step2.html
+++ b/app/views/journeys/invite/step2.html
@@ -4,28 +4,28 @@
 <a href="step1" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Add user's details
     </h1>
-    <p class="lede">Provide further details for the new user.</p>
+    <p class="govuk-body-l">Provide further details for the new user.</p>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step3">
       <fieldset>
-        <legend class="heading-medium">User's personal details</legend>
-        <div class="form-group">
-          <label class="form-label" for="firstname">First name</label>
-          <input class="form-control" type="text" name="firstname" id="firstname" required="required">
+        <legend class="govuk-heading-m">User's personal details</legend>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="firstname">First name</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="firstname" id="firstname" required="required">
         </div>
-        <div class="form-group">
-          <label class="form-label" for="lastname">Last name</label>
-          <input class="form-control" type="text" name="lastname" id="lastname" required="required">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="lastname">Last name</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="lastname" id="lastname" required="required">
         </div>
-        <div class="form-group">
-          <label class="form-label" for="jobtitle">Job title (optional)</label>
-          <input class="form-control" type="text" name="jobtitle" id="jobtitle">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="jobtitle">Job title (optional)</label>
+          <input class="govuk-input govuk-!-width-one-half" type="text" name="jobtitle" id="jobtitle">
         </div>
       </fieldset>
       <div class="submit-buttons">
