--- a/app/views/journeys/invite/step3.html
+++ b/app/views/journeys/invite/step3.html
@@ -4,10 +4,10 @@
 <a href="step2" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Add services
     </h1>
-    <p class="lede">Select the services the new user will be able to access and their permission levels.</p>
+    <p class="govuk-body-l">Select the services the new user will be able to access and their permission levels.</p>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -18,7 +18,7 @@
     <form method="get" action="step4" class="select-service-list">
 
       <!-- Service -->
-      <div class="form-group">
+      <div class="govuk-form-group">
         <div class="multiple-choice" data-target="service1-permissions">
           <input id="service1" name="service1" type="checkbox" value="service1">
           <label for="service1">Key to Success</label>
@@ -40,7 +40,7 @@
       </div>
 
       <!-- Service -->
-      <div class="form-group">
+      <div class="govuk-form-group">
         <div class="multiple-choice" data-target="service2-permissions">
           <input id="service2" name="service2" type="checkbox" value="service2">
           <label for="service2">Multiplication tables check</label>
