--- a/app/views/journeys/invite/step5.html
+++ b/app/views/journeys/invite/step5.html
@@ -4,10 +4,10 @@
 <a href="step4" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Review
     </h1>
-    <p class="lede">Please confirm these details before granting access to the services.</p>
+    <p class="govuk-body-l">Please confirm these details before granting access to the services.</p>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -15,7 +15,7 @@
     <form method="get" action="/">
       <section>
         <div class="heading-group">
-          <h2 class="heading-medium">Personal details</h2>
+          <h2 class="govuk-heading-m">Personal details</h2>
           <a href="step2-2" class="button-secondary">Edit <span class="vh">the user's personal details</span> </a>
         </div>
         <dl class="rows la">
@@ -29,7 +29,7 @@
       </section>
       <section>
         <div class="heading-group">
-          <h2 class="heading-medium">Services</h2>
+          <h2 class="govuk-heading-m">Services</h2>
           <a href="step3-2" class="button-secondary">Edit <span class="vh">the user's services</span> </a>
         </div>
         <table class="sortable">
@@ -57,7 +57,7 @@
       </section>
       <section>
         <div class="heading-group">
-          <h2 class="heading-medium">Welcome message</h2>
+          <h2 class="govuk-heading-m">Welcome message</h2>
           <a href="step4-2" class="button-secondary">Edit <span class="vh">the welcome message</span> </a>
         </div>
         <blockquote>
