--- a/app/views/journeys/migration/step2.html
+++ b/app/views/journeys/migration/step2.html
@@ -4,10 +4,10 @@
 <a href="step1" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Enter your Secure Access sign-in details
     </h1>
-    <p class="lede">This will help us transfer your permissions from Secure Access to DfE Sign-in service.</p>
+    <p class="govuk-body-l">This will help us transfer your permissions from Secure Access to DfE Sign-in service.</p>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -16,14 +16,14 @@
   </div>
   <div class="col-6">
     <form method="get" action="step3">
-      <div class="form-group">
-        <label class="form-label" for="username">Secure access username</label>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="username">Secure access username</label>
         <input class="form-control full-width" type="text" name="username" id="username" required="required">
       </div>
-      <div class="form-group">
-        <label class="form-label" for="password">Secure access password</label>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="password">Secure access password</label>
         <div class="show-password full-width">
-          <input class="form-control" id="password" name="password" type="password" required="required">
+          <input class="govuk-input govuk-!-width-one-half" id="password" name="password" type="password" required="required">
         </div>
       </div>
       <input type="submit" class="button" class="button" value="Continue">
