--- a/app/views/journeys/migration/step4.html
+++ b/app/views/journeys/migration/step4.html
@@ -4,27 +4,27 @@
 <a href="step3" class="link-back">Back</a>
 <div class="govuk-grid-row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Create a password
     </h1>
-    <p class="lede">We need you to create a password for your new DfE Sign-in account </p>
+    <p class="govuk-body-l">We need you to create a password for your new DfE Sign-in account </p>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="col-12">
     <form method="get" action="step5">
 
-      <div class="form-group">
-        <label class="form-label" for="password">Password</label>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="password">Password</label>
         <div class="show-password">
-          <input class="form-control" id="password" name="password" type="password" required="required">
+          <input class="govuk-input govuk-!-width-one-half" id="password" name="password" type="password" required="required">
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="form-label" for="confirm-password">Confirm password</label>
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="confirm-password">Confirm password</label>
         <div class="show-password">
-          <input class="form-control" id="confirm-password" name="confirm-password" type="password" required="required">
+          <input class="govuk-input govuk-!-width-one-half" id="confirm-password" name="confirm-password" type="password" required="required">
         </div>
       </div>
 
