--- a/app/views/journeys/migration/step5.html
+++ b/app/views/journeys/migration/step5.html
@@ -5,10 +5,10 @@
   <div class="col-12">
 
     <div class="govuk-box-highlight">
-      <h1 class="heading-xlarge">
+      <h1 class="govuk-heading-xl">
         Registration complete
       </h1>
-      <p class="font-medium">
+      <p class="govuk-!-font-size-24">
         Your new DfE Sign-in account has been setup, a confirmation email has been sent to <strong class="bold">jane.murphy@stpatricks.co.uk</strong>
       </p>
     </div>
@@ -18,7 +18,7 @@
 
 <div class="row">
   <div class="col-8">
-    <h1 class="heading-xlarge">
+    <h1 class="govuk-heading-xl">
       Access DfE services
     </h1>
     <p class="">These are the services you are approved to use.</p>
