--- a/app/views/user-profile-access-request.html
+++ b/app/views/user-profile-access-request.html
@@ -4,8 +4,8 @@
 {% block content %}
 
         <div class="govuk-grid-row">
-            <div class="column-two-thirds">
-                <h1 class="heading-xlarge">
+            <div class="govuk-grid-column-two-thirds">
+                <h1 class="govuk-heading-xl">
                     Jane Murphy
                 </h1>
             </div>
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col-8">
-                <h2 class="heading-medium">User details</h2>
+                <h2 class="govuk-heading-m">User details</h2>
                 <table>
                     <tr>
                         <th scope="row">First name</th>
@@ -32,17 +32,17 @@
                         <td>Management information officer</td>
                     </tr>
                 </table>
-                <h2 class="heading-medium">Services user has access to</h2>
-                <p>The user doesn't have access to any services.</p>
+                <h2 class="govuk-heading-m">Services user has access to</h2>
+                <p class="govuk-body">The user doesn't have access to any services.</p>
 
             </div>
             <div class="col-4">
                 <aside>
-                    <h2 class="heading-medium">Profile actions</h2>
+                    <h2 class="govuk-heading-m">Profile actions</h2>
                     <nav class="subnav">
                         <ul>
-                            <li><a href="suspend.html">Suspend user</a></li>
-                            <li><a href="give-access.html">Give user access to a service</a></li>
+                            <li><a href="suspend.html" class="govuk-link">Suspend user</a></li>
+                            <li><a href="give-access.html" class="govuk-link">Give user access to a service</a></li>
                         </ul>
                     </nav>
                 </aside>
