--- a/app/views/user-profile.html
+++ b/app/views/user-profile.html
@@ -6,11 +6,11 @@
 {% block content %}
 
         <div class="govuk-grid-row">
-            <div class="column-two-thirds">
-                <h1 class="heading-small">
+            <div class="govuk-grid-column-two-thirds">
+                <h1 class="govuk-heading-s">
                     User profile
                 </h1>
-                <h2 class="heading-xlarge">
+                <h2 class="govuk-heading-xl">
                   Jane Murphy
                 </h2>
             </div>
@@ -18,7 +18,7 @@
 
         <div class="row">
             <div class="col-8">
-                <h2 class="heading-medium">User details</h2>
+                <h2 class="govuk-heading-m">User details</h2>
                 <dl class="inline">
                     <dt>First name</dt>
                     <dd>Jane</dd>
@@ -30,12 +30,12 @@
             </div>
             <div class="col-4">
                 <aside>
-                    <h2 class="heading-medium">Profile actions</h2>
+                    <h2 class="govuk-heading-m">Profile actions</h2>
                     <nav class="subnav">
                         <ul>
-                            <li><a href="user-profile-edit.html">Change my details</a></li>
-                            <li><a href="password-edit.html">Change my password</a></li>
-                            <li><a href="user-profile-delete.html">Delete my account</a></li>
+                            <li><a href="user-profile-edit.html" class="govuk-link">Change my details</a></li>
+                            <li><a href="password-edit.html" class="govuk-link">Change my password</a></li>
+                            <li><a href="user-profile-delete.html" class="govuk-link">Delete my account</a></li>
                         </ul>
                     </nav>
                 </aside>
