--- a/src/sass/pages/_cookies.scss
+++ b/src/sass/pages/_cookies.scss
@@ -12,7 +12,7 @@
     .no-js-message {
       display: none;
     }
-    .heading-xlarge {
+    .govuk-heading-xl {
       &--reduce-padding {
         margin-top: 10px;
       }
@@ -23,7 +23,7 @@
         p {
           margin-bottom: 0;
         }
-        .list-bullet {
+        .govuk-list--bullet {
           &--indent {
             padding-left: 40px;
           }
