--- a/src/sass/pages/_task-list.scss
+++ b/src/sass/pages/_task-list.scss
@@ -2,7 +2,7 @@
 
 // Override column width for tablet and up
 .column-minimum {
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     min-width: 600px;
   }
 }
@@ -12,7 +12,7 @@ $task-list-indent: 35px;
 
 .task-list {
   @include govuk-responsive-margin(6, "top");
-  // @include govuk-media-query($until: tablet) {
+  // @include govuk-media-query(tablet) {
   //   margin-top: ($govuk-gutter * 2);
   // }
 }
@@ -29,7 +29,7 @@ $task-list-indent: 35px;
   display: table-cell;
   @include govuk-responsive-padding(6, "right");
 
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     min-width: $task-list-indent;
     // padding-right: 0;
   }
@@ -38,11 +38,11 @@ $task-list-indent: 35px;
 
 .task-list-items {
   @include govuk-responsive-margin(6, "bottom");
-  // @include govuk-media-query($until: tablet) {
+  // @include govuk-media-query(tablet) {
   //   margin-bottom: ($govuk-gutter * 2);
   // }
 
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     padding-left: $task-list-indent;
   }
 }
