--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -41,12 +41,12 @@ html, body {
   color: #fff;
   margin: 10px 15px;
   font-size: 16px;
-  @include govuk-media-query($until: tablet) {
+  @include govuk-media-query(tablet) {
     font-size: 24px;
   }
 }
 
-h1.heading-xlarge {
+h1.govuk-heading-xl {
   margin: 1.25em 0 0.625em;
 }
 
